images de la page Pourquoi

--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -56,7 +56,7 @@
         <figure class="card card-flip">
           <div class="card card-size">
              <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("image.jpg")%>)">
-              <h3 class="card-title">Image externe</h3>
+              <h3 class="card-title">Communication</h3>
             </div>
             <div class="card-body">
               <p class="card-text fact"> <strong>82 % des entreprises </strong>considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
@@ -65,7 +65,7 @@
 
           <div class="card card-size">
             <div class="card-body">
-              <h3 class="card-title">Image externe</h3>
+              <h3 class="card-title">Communication</h3>
               <p class="card-text text">
                 Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
               </p>
