add new image in Comment

--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -5,43 +5,52 @@
     <div class="header-padding-comment" >
       <h2 class="green-bg">Les objectifs du Défi</h2>
       <p class="text">Le Défi consiste en l'<b>accompagnement structurel et individuel</b> des établissements participants dans <b>l’étude et la mise en place de solutions</b> techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.</p>
-      <h5 class="my-4 ml-3">Objectifs principaux :</h5>
-      <ul class="list mb-5 bullet-custom">
-        <li class="my-2 ml-lg-4">
-          Réduire la production de déchets et les impacts environnementaux associés
-        </li>
-        <li class="my-2 ml-lg-4">
-          Augmenter la valorisation matière, organique voire énergétique des déchets produits
-        </li>
-        <li class="my-2 ml-lg-4">
-          Intéresser et mobiliser les professionnels à prévenir et gérer leurs déchets
-        </li>
-        <li class="my-2 ml-lg-4">
-          Valoriser publiquement les démarches exemplaires des établissements participants
-        </li>
-      </ul>
-      <div id="comment2"></div>
-      <h5 class="my-4 ml-3">Objectifs secondaires :</h5>
-      <ul class="list mb-5 bullet-custom bullet-secondary">
-        <li class="my-2 ml-lg-4">
-          Réduire les coûts de gestion des déchets
-        </li>
-        <li class="my-2 ml-lg-4">
-          Donner une nouvelle représentation psycho-sociologique positive du sujet des déchets
-        </li>
-        <li class="my-2 ml-lg-4">
-          Développer le lien social
-        </li>
-        <li class="my-2 ml-lg-4">
-          Développer la culture d’établissement autour des déchets
-        </li>
-        <li class="my-2 ml-lg-4">
-          Développer des synergies en écologie industrielle entre les participants du défi et hors-défi.
-        </li>
-        <li class="my-2 ml-lg-4">
-          Valoriser les acteurs locaux de la filière des déchets
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col-lg-6">
+            <h5 class="my-4 ml-3">Objectifs principaux :</h5>
+            <ul class="list mb-5 bullet-custom">
+              <li class="my-2 ml-lg-4">
+                Réduire la production de déchets et les impacts environnementaux associés
+              </li>
+              <li class="my-2 ml-lg-4">
+                Augmenter la valorisation matière, organique voire énergétique des déchets produits
+              </li>
+              <li class="my-2 ml-lg-4">
+                Intéresser et mobiliser les professionnels à prévenir et gérer leurs déchets
+              </li>
+              <li class="my-2 ml-lg-4">
+                Valoriser publiquement les démarches exemplaires des établissements participants
+              </li>
+            </ul>
+            <div id="comment2"></div>
+            <h5 class="my-4 ml-3">Objectifs secondaires :</h5>
+            <ul class="list mb-5 bullet-custom bullet-secondary">
+              <li class="my-2 ml-lg-4">
+                Réduire les coûts de gestion des déchets
+              </li>
+              <li class="my-2 ml-lg-4">
+                Donner une nouvelle représentation psycho-sociologique positive du sujet des déchets
+              </li>
+              <li class="my-2 ml-lg-4">
+                Développer le lien social
+              </li>
+              <li class="my-2 ml-lg-4">
+                Développer la culture d’établissement autour des déchets
+              </li>
+              <li class="my-2 ml-lg-4">
+                Développer des synergies en écologie industrielle entre les participants du défi et hors-défi.
+              </li>
+              <li class="my-2 ml-lg-4">
+                Valoriser les acteurs locaux de la filière des déchets
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <div class="d-flex flex-column justify-content-center align-items-center h-100">
+              <%= image_tag "objectifs.jpg", width: 400, class:"header-padding-comment-image" %>
+            </div>
+          </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-6">
