added a map in Inscription

--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -2,17 +2,26 @@
 <div class="wrapper">
   <div class="container">
     <h1 class="header text-primary my-5 text-center pt-5">S'inscrire</h1>
-    <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez vous inscrire début décembre.</p>
-    <p>D'ici là vous pouvez agir de votre côté ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
-    <h5 class="my-4 ml-3">Objectifs principaux :</h5>
-    <ul class="list mb-5 bullet-custom">
-      <li class="my-2 ml-lg-4">
-        Le guide du zéro déchet au bureau, créé par Zero Waste
-      </li>
-      <li class="my-2 ml-lg-4">
-        Le guide pour être éco-responsable au bureau, créé par l'ADEME
-      </li>
-    </ul>
+    <div class="row">
+      <div class="col-lg-6">
+        <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez vous inscrire début décembre.</p>
+        <p>D'ici là vous pouvez agir de votre côté ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
+        <h5 class="my-4 ml-3">Objectifs principaux :</h5>
+        <ul class="list mb-5 bullet-custom">
+          <li class="my-2 ml-lg-4">
+            Le guide du zéro déchet au bureau, créé par Zero Waste
+          </li>
+          <li class="my-2 ml-lg-4">
+            Le guide pour être éco-responsable au bureau, créé par l'ADEME
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6">
+        <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+          <%= image_tag "carte.png", width: 300, class:"header-padding-comment-image" %>
+        </div>
+      </div>
+    </div>
     <h5>Pour rester informé, laissez votre adresse mail</h5>
 
     <p>Votre structure n'est pas située sur Bordeaux Métropole ? Vous pouvez organiser un défi sur votre territoire ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
