--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -10,7 +10,7 @@
       <h2 class="mb-3">Don</h2>
       <div class="row">
         <div class="col-lg-6">
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center mb-3">
             <%= image_tag "Don", width:300, height: 300 %>
           </div>
         </div>
