--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="container mt-5">
-    <div class="ekologeek">
+    <div class="ekologeek pt-4">
       <h2 class="header text-primary">Ekolo[geek]</h2>
       <h4 class="mb-4">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
 
@@ -10,6 +10,11 @@
 
       <div class="row">
         <div class="col-lg-6">
+          <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+            <%= image_tag "ekologeek-stand.jpg", width: 300, class:"header-padding-comment-image" %>
+          </div>
+        </div>
+        <div class="col-lg-6">
           <p class="text">
             Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
           </p>
@@ -18,27 +23,31 @@
             Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
           </p>
         </div>
+      </div>
+      <div class="row">
         <div class="col-lg-6">
-          <div class="d-flex flex-column justify-content-center align-items-center h-100 illustration mb-5">
-            <%= image_tag "ekologeek-stand" %>
+          <p class="text">
+            Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
+          </p>
+
+          <p class="text">
+            Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
+          </p>
+          <p class="text mb-5">
+            Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+            <%= image_tag "ekologeek-accompagnement.jpg", width: 300, class:"header-padding-comment-image" %>
           </div>
         </div>
       </div>
-      <p class="text">
-        Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
-      </p>
-
-      <p class="text">
-        Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
-      </p>
-      <p class="text mb-5">
-        Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
-      </p>
 
       <div class="row">
         <div class="col-12 col-lg-6">
-          <div class="d-flex flex-column justify-content-center align-items-center h-100 illustration">
-            <%= image_tag "equipe.jpg" %>
+          <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+            <%= image_tag "ekologeek.png", width: 300, class:"header-padding-comment-image" %>
           </div>
         </div>
 
