--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -16,7 +16,7 @@
             </div>
             <div class="card-body">
               <div class="card-text fact">
-                <p class="citation"> <strong> 140 kg de déchets / an </strong> en moyenne sont produit par un·e salarié·e de bureau</p>
+                <p class="citation"> <strong> 140 kg de déchets / an </strong> en moyenne sont produits par un·e salarié·e de bureau</p>
                 <p class="source"><em>source : ADEME</em></p>
               </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="card-body">
               <div class="card-text fact">
                 <p class="citation"><strong>5 flux de déchets</strong> doivent obligatoirement être triés et valorisés</p>
-                <p class="source"><em>source : décret 5 flux” du 10 mars 2016</em></p>
+                <p class="source"><em>source : "décret 5 flux" du 10 mars 2016</em></p>
               </div>
               <div id="pourquoi2"></div>
             </div>
