--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,12 +1,8 @@
 <div class="wrapper">
   <div class="container mt-5">
-    <div class="ekologeek pt-4">
+    <div class="container-ekologeek pt-4">
       <h2 class="header text-primary">Ekolo[geek]</h2>
       <h4 class="mb-4">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
-
-      <p class="text">
-        Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
-      </p>
 
       <div class="row">
         <div class="col-lg-6">
@@ -14,28 +10,27 @@
             <%= image_tag "ekologeek-stand.jpg", width: 300, class:"header-padding-comment-image" %>
           </div>
         </div>
-        <div class="col-lg-6">
-          <p class="text">
-            Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
-          </p>
-
-          <p class="text">
-            Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
-          </p>
+        <div class="col-lg-6 d-flex align-items-center">
+          <div class="text">
+            <p class="mb-0">Depuis plus de 10 ans, notre association
+            <strong>sensibilise et mobilise</strong> le jeune, grand public et les professionnels aux <strong>éco-gestes</strong> (déchets, eau, énergie, consommation responsable) sur le web et sur le terrain.</p>
+            <p class="mb-0">Avec notre stand animé, nous participons à
+            plus d'une <strong>quarantaine d'événements par an</strong>, ainsi qu'à des temps périscolaires (TAP). L'association compte 2 salariés, 1 volontaire en Service
+            Civique et une quarantaine de bénévoles.</p>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <p class="text">
-            Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
-          </p>
 
-          <p class="text">
-            Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
-          </p>
-          <p class="text mb-5">
-            Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
-          </p>
+      <div class="row">
+        <div class="col-lg-6 d-flex align-items-center pt-3">
+          <div class="text">
+            <p class="mb-0">
+              Depuis 2016, nous accompagnons également des <strong>professionnels dans leur démarche d'éco-responsabilité</strong> interne. Par exemple, à la <strong>mairie du Bouscat</strong>  nous avons accompagné  des « agents référents » sur le thème de l’économie circulaire, avec en 2017 cinq ateliers-formations et la visite d'une ressourcerie, et en 2018 nous continuons sur le thème des changements de comportements sur l'énergie et les déchets.
+            </p>
+            <p>
+              Depuis fin 2016, nous sommes <strong>missionnés par Enedis</strong> Aquitaine-Nord pour <strong>étudier l’impact sur leurs clients</strong> qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées.
+            </p>
+          </div>
         </div>
         <div class="col-lg-6">
           <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
@@ -44,76 +39,67 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-12 col-lg-6">
-          <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+      <div class="h-100 p-3 d-flex flex-column justify-content-center align-items-center para-0">
+        <p><strong>Association loi 1901 reconnue d'intérêt général</strong></p>
+        <p>Maison de la Nature et de l'Environnement</p>
+        <p> 3 rue de Tauzia 33800 BORDEAUX</p>
+        <p>
+          <%= link_to "https://www.ekologeek.com", target: :blank do %>
             <%= image_tag "ekologeek.png", width: 300, class:"header-padding-comment-image" %>
+          <% end %>
+        </p>
+      </div>
+
+      <div class="partenaires mt-5">
+        <h2 class="header text-primary">Les partenaires</h2>
+        <p class="text">
+          Ce projet ne pourrait être mis en œuvre sans le soutien de nos partenaires :
+        </p>
+
+        <div class="row">
+          <div class="col-12 col-md-4 mb-3">
+            <%= link_to "https://www.cebx.fr/", target: :blank do %>
+              <div class="card">
+                <img class="card-img-top" src="<%= image_path("entreprises") %>">
+                <div class="card-body">
+                  <p class="card-text text">
+                    Le <strong> Club des Entreprises de Bordeaux </strong> et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
+                  </p>
+                </div>
+              </div>
+            <% end %>
+          </div>
+
+          <div class="col-12 col-md-4 mb-3">
+            <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+              <div class="card">
+                <img class="card-img-top" src="<%= image_path("metropole") %>">
+                <div class="card-body">
+                  <p class="card-text text">
+                    Premier partenaire financier, <strong> Bordeaux Métropole </strong> nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
+                  </p>
+                </div>
+              </div>
+            <% end %>
+          </div>
+
+          <div class="col-12 col-md-4 mb-3">
+            <%= link_to "https://www.ademe.fr/", target: :blank do %>
+              <div class="card">
+                <img class="card-img-top" src="<%= image_path("ademe") %>">
+                <div class="card-body">
+                  <p class="card-text text">
+                    Important partenaire financier, l' <strong>ADEME</strong> soutient le Défi qui est complémentaire de ses propres outils.
+                  </p>
+                </div>
+              </div>
+            <% end %>
           </div>
         </div>
-
-        <div class="col-12 col-lg-6">
-          <div class="h-100 p-2 d-flex flex-column justify-content-center align-items-center para-0">
-            <p>Association loi 1901 reconnue d'intérêt général</p>
-            <p>Maison de la Nature et de l'Environnement</p>
-            <p> 3 rue de Tauzia 33800 BORDEAUX</p>
-            <p>
-              <%= link_to( "www.ekologeek.com", "https://www.ekologeek.com", target: :blank) %>
-            </p>
-          </div>
+        <div class="call-action">
+          <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
         </div>
       </div>
-    </div>
-
-    <div class="partenaires mt-5">
-      <h2 class="header text-primary">Les partenaires</h2>
-      <p class="text">
-        Le projet étant porté par une association, il a besoin de partenaires  pour être mis en œuvre.
-      </p>
-
-      <div class="row">
-        <div class="col-12 col-md-4 mb-3">
-          <%= link_to "https://www.cebx.fr/", target: :blank do %>
-            <div class="card">
-              <img class="card-img-top" src="<%= image_path("entreprises") %>">
-              <div class="card-body">
-                <p class="card-text text">
-                  Le <strong> Club des Entreprises de Bordeaux </strong> et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
-                </p>
-              </div>
-            </div>
-          <% end %>
-        </div>
-
-        <div class="col-12 col-md-4 mb-3">
-          <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
-            <div class="card">
-              <img class="card-img-top" src="<%= image_path("metropole") %>">
-              <div class="card-body">
-                <p class="card-text text">
-                  Premier partenaire financier, <strong> Bordeaux Métropole </strong> nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
-                </p>
-              </div>
-            </div>
-          <% end %>
-        </div>
-
-        <div class="col-12 col-md-4 mb-3">
-          <%= link_to "https://www.ademe.fr/", target: :blank do %>
-            <div class="card">
-              <img class="card-img-top" src="<%= image_path("ademe") %>">
-              <div class="card-body">
-                <p class="card-text text">
-                  Important partenaire financier, l' <strong>ADEME</strong> soutient le Défi qui est complémentaire de ses propres outils.
-                </p>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      <div class="call-action">
-        <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
-      </div>
-
     </div>
   </div>
   <%= render 'shared/footer' %>
