--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -6,9 +6,10 @@
     <div class="mecenat">
       <h2 class="mb-3 green-bg">Mécenat</h2>
       <div id="soutenir2"></div>
-      <p class="text">
-        En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise sera <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et bénéficiera d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir un <b>soutien en nature</b> (prêt ou achat de matériel, fournitures etc...) <b>ou en compétences</b>. Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez le <b>dossier de mécénat</b>.
-      </p>
+      <div class="text">
+        <p class="mb-0">En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise sera <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et bénéficiera d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir un <b>soutien en nature</b> (prêt ou achat de matériel, fournitures etc...) <b>ou en compétences</b>.</p>
+        <p>Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez le <b>dossier de mécénat</b> ==> mettre un lien.</p>
+      </div>
       <h2 class="mb-3 green-bg">Don</h2>
       <div class="row">
         <div class="col-lg-6 padding">
@@ -42,14 +43,14 @@
         </li>
       </ul>
       <p class="text">
-        Ces docs sont sur le drive. D'autres supports seront ajoutés en novembre.Pour la présentation vous pouvez vous inspirez de <%= link_to "ça", "https://docs.google.com/spreadsheets/d/1QC1h-YlOMGTor4QFJ8QrR3RTvzQ83j9UpqG8uc5D9IA/edit#gid=0", target:"_blank"%>.
+        Ces docs sont sur le drive. D'autres supports seront ajoutés en novembre.Pour la présentation vous pouvez vous inspirez de <%= link_to "ça", "https://docs.google.com/spreadsheets/d/1QC1h-YlOMGTor4QFJ8QrR3RTvzQ83j9UpqG8uc5D9IA/edit#gid=0", target:"_blank"%>. ==> utiliser leurs docs
       </p>
     </div>
     <div class="padding">
       <div id="soutenir4"></div>
       <h2 class="mb-3 green-bg">Témoignage</h2>
-      <p>Vous êtes un professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une <b>entreprise éco exemplaire</b> ?
-      <b>Partagez votre expérience ! Mettez en valeur</b> votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
+      <p class='mb-0'>Vous êtes un professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une <b>entreprise éco exemplaire</b> ?</p>
+      <p><b>Partagez votre expérience</b> ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
       </p>
       <%= link_to "Contact", root_path, class:"btn btn-primary text-white" %>
     </div>
