fix bug responsive picture and navbar

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -59,6 +59,12 @@
   }
 }
 
+.comment-picture {
+  @media (max-width: $tablet) {
+    width: 80%;
+  }
+}
+
 .padding {
   padding-bottom: 50px;
   @media (max-width: $tablet) {
