--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <div id="comment1"></div>
   <div class="container mt-5 mb-5">
+    <div id="comment1"></div>
     <h1 class="header text-primary mb-5 text-center pt-5">Comment</h1>
     <div class="header-padding-comment" >
       <div class="row">
@@ -34,7 +34,7 @@
         </div>
         <div class="col-lg-6">
           <div class="d-flex flex-column justify-content-center align-items-center h-100">
-            <%= image_tag "objectifs.jpg", width: 400, class:"header-padding-comment-image" %>
+            <%= image_tag "objectifs.jpg", width: 400, class:"header-padding-comment-image comment-picture" %>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <%= image_tag "carte", width: 400, class:"header-padding-comment-image" %>
+          <%= image_tag "carte", width: 400, class:"header-padding-comment-image comment-picture" %>
         </div>
       </div>
       <div class="col-lg-6">
