--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -25,8 +25,10 @@
   a .dropdown-item:active {
     font-weight: bold;
   }
-  @media (max-width: $desktop) {
-    height: auto;
+  .logo-nav-secondary {
+    @media (max-width: $desktop) {
+      height: 40px;
+    }
   }
   ul li > a {
     .nav-link[data-toggle="dropdown"] {
@@ -34,6 +36,9 @@
         display: block;
       }
     }
+  }
+  @media (max-width: $desktop) {
+    top: 40px;
   }
 }
 
@@ -47,6 +52,7 @@
     justify-content: space-around !important;
     position: absolute;
     top: 0;
+    height: auto;
     .nav-link {
       color: white;
     }
@@ -88,8 +94,8 @@
      padding: 10px;
      margin: 5px;
      background: white;
-    @media (max-width: $tablet) {
-      width: 100px;
+    @media (max-width: $desktop) {
+      width: 50px;
     }
   }
 }
