rationalisé les marges des titres

--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -48,7 +48,7 @@
       <div class="col-lg-6">
         <h2 class="green-bg" >Les structures éligibles</h2>
         <div class="text">
-          <p class="m-0">Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
+          <p class="mb-1">Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
           Pour ce premier Défi, les structures participantes doivent résider dans <b>le territoire de Bordeaux Métropole</b>.</p>
           <p class="m-0">L'objectif est d'étendre le Défi à de nouveaux territoires.</p>
           <p class="m-0">Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? </p>
@@ -66,10 +66,10 @@
       </div>
     <div class="mt-5">
       <h2 class="green-bg">Comment ça se passe ?</h2>
-      <h5 class="mb-3 mt-5">Collecte de données</h5>
+      <h5 class="mb-2 mt-3">Collecte de données</h5>
       <p>Sur une durée de 6 mois, les structures devront <b>mesurer</b> régulièrement leur <b>production de déchets</b> et évaluer leurs <b>comportement</b>, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur <b>progression</b> et leur <b>classement</b> par rapport aux autres.</p>
-      <h5 class="mb-3 mt-5">Activités collectives</h5>
-      <ul class="list mb-5 bullet-custom">
+      <h5 class="mb-2 mt-3">Activités collectives</h5>
+      <ul class="list mb-2 bullet-custom">
         <li class="my-2 ml-lg-4">
           <b>Ateliers-formations échanges</b> (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
         </li>
@@ -87,22 +87,22 @@
         </li>
       </ul>
       <div id="comment5"></div>
-      <h5 class="mb-3 mt-5">Accompagnement individuel</h5>
+      <h5 class="mb-2 mt-3">Accompagnement individuel</h5>
       <p>Un suivi régulier sera effectué avec chaque structure pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.</p>
 
-      <h5 class="mb-3 mt-5">Documents</h5>
+      <h5 class="mb-2 mt-3">Documents</h5>
       Charte, règlement... - liens pour télécharger des documents à créer
     </div>
     <div id="comment6"></div>
     <div >
-      <h2 class="mb-3 mt-5 green-bg" >Planning</h2>
+      <h2 class="mb-2 mt-5 green-bg" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center my-5">
         <%= image_tag "Frise", style:"width: 100%", class:"px-lg-5" %>
       </div>
       <%= link_to "télécharger", root_path %>
     </div>
     <div>
-      <h2 class="mb-3 mt-5 green-bg" >Combien ça coûte ?</h2>
+      <h2 class="mb-2 mt-5 green-bg" >Combien ça coûte ?</h2>
       <p>La participation au Défi comprend un <b>prix forfaitaire</b> de 150€, <b>plus</b> un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
       <h5 class="my-4 ml-3">Exemples :</h5>
       <ul class="list mb-5 bullet-custom  bullet-secondary">
