add modif carousel text and picture in don

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -4,8 +4,8 @@
       <%= image_tag "gestion", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn" do %>
-        <h5>Chaque salarié·e de bureau produit en moyenne 140 kg de déchets par an</h5>
-        <p class="mb-0">Et vous ?</p>
+        <h5>140kg de déchets par bureau</h5>
+        <p class="mb-0">C'est trop pour vous ?</p>
         <% end %>
       </div>
     </div>
@@ -13,9 +13,9 @@
       <%= image_tag "mecenat", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn" do %>
-            <h5>Relevez le Défi ! </h5>
-            <p class="mb-0">Réduisez vos déchets de 10%</p>
+          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn" do %>
+          <h5>Le Défi a besoin de vous !</h5>
+          <p class="mb-0">Soutenez le projet</p>
           <% end %>
         </div>
       </div>
@@ -23,9 +23,9 @@
     <div class="carousel-item">
       <%= image_tag "mobilisation", class:"d-block w-100", alt:"Third slide" %>
       <div class="carousel-caption d-md-block">
-        <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn" do %>
-          <h5>Le Défi a besoin de vous !</h5>
-          <p class="mb-0">Soutenez le projet</p>
+        <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn" do %>
+        <h5>Relevez le Défi ! </h5>
+        <p class="mb-0">Réduisez vos déchets de 10%</p>
         <% end %>
       </div>
     </div>
