--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -14,10 +14,10 @@
       <div class="row">
         <div class="col-lg-6 padding">
           <div class="d-flex justify-content-center">
-            <%= image_tag "Don", width:300, height: 300 %>
+            <%= image_tag "Don", width:200, height: 200 %>
           </div>
         </div>
-        <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center">
+        <div class="col-lg-6 d-flex flex-column justify-content-center align-items-start">
           <p>
             Les particuliers peuvent également soutenir le projet, à travers le don. <b>Chaque contribution est importante</b>, quelque soit le montant.
           </p>
