mis en avant la punchline pour Soutenir

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -97,6 +97,10 @@
   padding: 5px 10px;
 }
 
- body {
-   position: relative;
- }
+body {
+ position: relative;
+}
+
+.center {
+  text-align: center;
+}
