--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="container">
     <div id="soutenir1"></div>
-    <h1 class="header text-primary my-5 pt-5 text-center">Soutenir</h1>
-    <p>Le projet étant porté par une association, il a <b>besoin de vous</b> pour être mis en œuvre ! </p>
+    <h1 class="header text-primary mt-5 pt-5 text-center">Soutenir</h1>
+    <p class="center mb-3"><b> Le projet étant porté par une association, il a besoin de vous pour être mis en œuvre !</b> </p>
     <div class="mecenat">
       <h2 class="mb-3 green-bg">Mécenat</h2>
       <div id="soutenir2"></div>
@@ -31,7 +31,7 @@
       <p class="text">
         <b>Faîtes connaître le Défi</b> ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
       </p>
-      <ul class="list mb-3 bullet-custom">
+      <ul class="list mb-4 bullet-custom">
         <li class="my-2 ml-lg-4">
           <%= link_to "Dossier de mécenat", dossier_de_mecenat_path %>
         </li>
