--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -48,11 +48,11 @@
       <div class="col-lg-6">
         <h2 class="green-bg" >Les structures éligibles</h2>
         <div class="text">
-          <p class="mb-1">Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
+          <p class="mb-2">Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
           Pour ce premier Défi, les structures participantes doivent résider dans <b>le territoire de Bordeaux Métropole</b>.</p>
           <p class="m-0">L'objectif est d'étendre le Défi à de nouveaux territoires.</p>
           <p class="m-0">Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? </p>
-          <p class="m-0"><%= link_to "Contactez nous", root_path, class:"btn btn-primary text-white mt-1" %></p>
+          <p class="mt-1 mb-0"><%= link_to "Contactez nous !", root_path, class:"btn btn-primary text-white mt-1" %></p>
         </div>
 
         <div id="comment4"></div>
@@ -99,7 +99,6 @@
       <div class="d-flex justify-content-center align-items-center my-5">
         <%= image_tag "Frise", style:"width: 100%", class:"px-lg-5" %>
       </div>
-      <%= link_to "télécharger", root_path %>
     </div>
     <div>
       <h2 class="mb-2 mt-5 green-bg" >Combien ça coûte ?</h2>
