--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -24,7 +24,7 @@
 
     <p class="text">Votre structure n'est pas située sur Bordeaux Métropole ? <b>Vous pouvez organiser un défi sur votre territoire</b> ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
     <div class="padding">
-      <%= link_to "Contact", root_path, class:"btn btn-secondary text-white"%>
+      <%= link_to "Contactez nous !", root_path, class:"btn btn-secondary text-white"%>
     </div>
   </div>
   <%= render 'shared/footer' %>
