--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -49,7 +49,7 @@
       <p class='mb-0'>Vous êtes un professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une <b>entreprise éco exemplaire</b> ?</p>
       <p><b>Partagez votre expérience</b> ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
       </p>
-      <%= link_to "Contact", root_path, class:"btn btn-primary text-white" %>
+      <%= link_to "Contactez nous !", root_path, class:"btn btn-primary text-white" %>
     </div>
   </div>
   <%= render 'shared/footer' %>
