ajouté des max width sur les pages Soutenir et Inscription

--- a/app/stylesheets/components/_custom-container.scss
+++ b/app/stylesheets/components/_custom-container.scss
@@ -7,3 +7,13 @@
   max-width: 950px;
   margin: auto;
 }
+
+.container-soutenir {
+  max-width: 900px;
+  margin: auto;
+}
+
+.container-inscription {
+  max-width: 800px;
+  margin: auto;
+}
