--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -1,30 +1,32 @@
 
 <div class="wrapper">
   <div class="container">
-    <h1 class="header text-primary my-5 text-center pt-5">S'inscrire</h1>
-    <div class="row">
-      <div class="col-lg-6 text d-flex flex-column justify-content-center">
-        <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez <b>vous inscrire début décembre</b>.</p>
-        <p>D'ici là vous pouvez <b>agir de votre côté</b> ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
-        <ul class="list bullet-custom">
-          <li class="my-2 ml-lg-4">
-            Le <%= link_to "guide", "https://www.zerowastefrance.org/wp-content/uploads/2018/07/zd-au-bureau-zwf.pdf", target:"_blank" %>, du zéro déchet au bureau, créé par Zero Waste
-          </li>
-          <li class="my-2 ml-lg-4">
-            Le <%= link_to "guide", "https://www.ademe.fr/sites/default/files/assets/documents/guide-pratique-ecoresponsable-au-bureau.pdf", target:"_blank" %> pour être éco-responsable au bureau, créé par l'ADEME
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-6">
-        <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
-          <%= image_tag "carte.png", width: 300, class:"header-padding-comment-image" %>
+    <div class="container-inscription">
+      <h1 class="header text-primary my-5 text-center pt-5">S'inscrire</h1>
+      <div class="row">
+        <div class="col-lg-6 text d-flex flex-column justify-content-center">
+          <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez <b>vous inscrire début décembre</b>.</p>
+          <p>D'ici là vous pouvez <b>agir de votre côté</b> ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
+          <ul class="list bullet-custom">
+            <li class="my-2 ml-lg-4">
+              Le <%= link_to "guide", "https://www.zerowastefrance.org/wp-content/uploads/2018/07/zd-au-bureau-zwf.pdf", target:"_blank" %>, du zéro déchet au bureau, créé par Zero Waste
+            </li>
+            <li class="my-2 ml-lg-4">
+              Le <%= link_to "guide", "https://www.ademe.fr/sites/default/files/assets/documents/guide-pratique-ecoresponsable-au-bureau.pdf", target:"_blank" %> pour être éco-responsable au bureau, créé par l'ADEME
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <div class="d-flex flex-column justify-content-center align-items-center h-100 mb-3">
+            <%= image_tag "carte.png", width: 300, class:"header-padding-comment-image" %>
+          </div>
         </div>
       </div>
-    </div>
 
-    <p class="text">Votre structure n'est pas située sur Bordeaux Métropole ? <b>Vous pouvez organiser un défi sur votre territoire</b> ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
-    <div class="padding">
-      <%= link_to "Contactez nous !", root_path, class:"btn btn-secondary text-white"%>
+      <p class="text">Votre structure n'est pas située sur Bordeaux Métropole ? <b>Vous pouvez organiser un défi sur votre territoire</b> ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
+      <div class="padding">
+        <%= link_to "Contactez nous !", root_path, class:"btn btn-secondary text-white"%>
+      </div>
     </div>
   </div>
   <%= render 'shared/footer' %>
